- move exporter classes into own package - refactor AktienfreundeNet - refactor VINIS exporter - refactor csv exporter - simplify exporting security export